// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tracking All API should handle DB errors gracefully 1`] = `
Object {
  "error": "Failed to fetch tracking data",
}
`;

exports[`Tracking All API should return 405 for non-GET requests 1`] = `
Object {
  "error": "Method not allowed",
}
`;
